<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/statistics_day"
        android:layout_width="@dimen/statistics_period_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        style="@style/Widget.MoneyManager.TextView.Statistics"
        android:background="@drawable/background_statistics_left_selector"
        android:paddingHorizontal="@dimen/statistics_padding_horizontal"
        android:paddingVertical="@dimen/statistics_padding_vertical"
        android:text="@string/statistics_period_day"
        app:layout_constraintEnd_toStartOf="@+id/statistics_week"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statistics_week"
        android:layout_width="@dimen/statistics_period_width"
        android:layout_height="wrap_content"
        style="@style/Widget.MoneyManager.TextView.Statistics"
        android:background="@drawable/background_statistics_selector"
        android:paddingHorizontal="@dimen/statistics_padding_horizontal"
        android:paddingVertical="@dimen/statistics_padding_vertical"
        android:text="@string/statistics_period_week"
        app:layout_constraintBottom_toBottomOf="@+id/statistics_day"
        app:layout_constraintEnd_toStartOf="@+id/statistics_month"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/statistics_day"
        app:layout_constraintTop_toTopOf="@+id/statistics_day" />

    <TextView
        android:id="@+id/statistics_month"
        android:layout_width="@dimen/statistics_period_width"
        android:layout_height="wrap_content"
        style="@style/Widget.MoneyManager.TextView.Statistics"
        android:background="@drawable/background_statistics_selector"
        android:paddingHorizontal="@dimen/statistics_padding_horizontal"
        android:paddingVertical="@dimen/statistics_padding_vertical"
        android:text="@string/statistics_period_month"
        app:layout_constraintBottom_toBottomOf="@+id/statistics_day"
        app:layout_constraintEnd_toStartOf="@+id/statistics_year"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/statistics_week" />

    <TextView
        android:id="@+id/statistics_year"
        android:layout_width="@dimen/statistics_period_width"
        android:layout_height="wrap_content"
        android:background="@drawable/background_statistics_selector"
        style="@style/Widget.MoneyManager.TextView.Statistics"
        android:paddingHorizontal="@dimen/statistics_padding_horizontal"
        android:paddingVertical="@dimen/statistics_padding_vertical"
        android:text="@string/statistics_period_year"
        app:layout_constraintBottom_toBottomOf="@+id/statistics_day"
        app:layout_constraintEnd_toStartOf="@+id/statistics_custom"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/statistics_month"
        app:layout_constraintTop_toTopOf="@+id/statistics_day" />

    <TextView
        android:id="@+id/statistics_custom"
        android:layout_width="@dimen/statistics_period_width"
        android:layout_height="wrap_content"
        android:background="@drawable/background_statistics_right_selector"
        style="@style/Widget.MoneyManager.TextView.Statistics"
        android:paddingHorizontal="@dimen/statistics_padding_horizontal"
        android:paddingVertical="@dimen/statistics_padding_vertical"
        android:text="@string/statistics_period_custom"
        app:layout_constraintBottom_toBottomOf="@+id/statistics_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/statistics_year"
        app:layout_constraintTop_toTopOf="@+id/statistics_day" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/statistics_pie_chart"
        android:layout_width="0dp"
        android:layout_height="360dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_menu_rv" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/statistics_line_chart"
        android:layout_width="0dp"
        android:layout_height="360dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_menu_rv" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/statistics_horizontal_barrier1"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="statistics_pie_chart,statistics_line_chart" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/statistics_detailed_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_horizontal_barrier1">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/statistics_vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <TextView
            android:id="@+id/statistics_spent_in_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_expense_info_period_title"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textSize="@dimen/statistics_spent_in_period"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/statistics_spent_in_period_sum"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/statistics_vertical_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <com.d9tilov.android.designsystem.CurrencyView
            android:id="@+id/statistics_spent_in_period_sum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="@dimen/padding_large"
            app:layout_constraintBottom_toBottomOf="@+id/statistics_spent_in_period"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/statistics_spent_in_period"
            app:layout_constraintTop_toTopOf="@+id/statistics_spent_in_period"
            app:scaleEnabled="true"
            app:showDecimalPart="true"
            app:signTextSize="@dimen/statistics_spent_in_period_sign"
            app:sumTextColor="?attr/colorPrimary"
            app:signTextColor="?attr/colorPrimary"
            app:signTextStyle="?attr/textAppearanceCurrencySignExtraSmall"
            app:sum="300"
            app:sumTextSize="@dimen/statistics_spent_in_period"
            app:sumTextStyle="?attr/textAppearanceCurrencySumExtraSmall" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statistics_bar_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_detailed_info"
        tools:listitem="@layout/item_statistics_bar_chart" />

    <include
        android:id="@+id/statistics_empty_placeholder"
        layout="@layout/layout_empty_statistics_placeholder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_day" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statistics_menu_rv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/padding_large"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/statistics_menu"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_day"
        tools:listitem="@layout/item_statistics_menu"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/statistics_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginEnd="@dimen/padding_medium"
        android:background="?selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_custom"
        app:srcCompat="@drawable/ic_statistics_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>
